--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Sjoerd's Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <title>Thomas Saury</title>
   </head>
   <body>
     <noscript>
